<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/view_digits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_digits"
        android:gravity="end|center_vertical"
        android:hint="@string/begin_value"
        android:maxLength="10"
        android:textColorHint="@color/color_digits"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@+id/view_digits"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom|start">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="10"
                android:background="@drawable/button_digits"
                android:text="@string/button_0"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_point"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:background="@drawable/button_action"
                    android:text="@string/action_multi"
                    android:textColor="@color/color_digits"
                    android:textSize="@android:dimen/app_icon_size" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:background="@drawable/button_action"
                    android:text="@string/action_plus"
                    android:textColor="@color/color_digits"
                    android:textSize="@android:dimen/app_icon_size" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:background="@drawable/button_action"
                    android:text="@string/action_minus"
                    android:textColor="@color/color_digits"
                    android:textSize="@android:dimen/app_icon_size" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@drawable/button_action"
                    android:text="@string/action_equally"
                    android:textColor="@color/color_digits"
                    android:textSize="@android:dimen/app_icon_size" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="75dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_1"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_2"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_3"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="150dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_4"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_5"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_6"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="225dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_7"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_8"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_digits"
                android:text="@string/button_9"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginEnd="88dp"
            android:layout_marginBottom="300dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_clear"
                android:text="@string/button_clear"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/action_percent"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/action_div"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="375dp">

            <Button
                android:layout_width="92dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/button_mc"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="92dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/button_m_add"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="92dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/button_m_dec"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />

            <Button
                android:layout_width="81dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@drawable/button_action"
                android:text="@string/button_mr"
                android:textColor="@color/color_digits"
                android:textSize="@android:dimen/app_icon_size" />


        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>